# Easy-Azure-Storage-Manager-e-G-asm

./: .env  .gitignore  TODO.md  bun.lockb  package.json  sample.env  tailwind.config.js  todo  tsconfig.json  vite.config.ts
http/: ListSubscription.http  NewContainer.http  NewObject.http  NewStorage.http  RetrieveSAS.http
src/: HandleSetup.tsx  azure.d.ts  error.tsx  layout.tsx  main.tsx  types.d.ts
src-tauri/: Cargo.toml  storage.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  my_impl.rs
src-tauri/src/azure/: create_container_response.rs  list_container_response.rs  mod.rs  new_storage_data.rs  new_storage_response.rs  sas_token.rs  storage_list.rs  subscription_list.rs
src-tauri/src/helper/: create_storage.rs  get_shared_key.rs  get_storages.rs  get_subscriptions.rs  load_file.rs  mod.rs  storage.rs
src/commands/: invoker.ts
src/components/partials/: LoadingSpinner.tsx  button-actions.tsx  table-actions.tsx
src/components/table/: DataTable.tsx  DataTableColumnHeader.tsx  DataTablePagination.tsx  DataTableViewOptions.tsx  UrlComponent.tsx  columns.tsx
src/components/ui/: carousel.tsx
src/context/: AuthContext.tsx
src/lib/: orm.ts  utils.ts
src/models/: models.ts  store.ts
src/provider/: theme.tsx
src/routes/: home.tsx  settings.tsx
src/types/storage/: accepted.d.ts  created.d.ts  list-container.d.ts  list-keys.d.ts
