[package]
name = "Easm-V1"
version = "0.1.0"
description = "A Tool that will make you Easygasm"
authors = ["rootfebri"]
edition = "2021"
[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14.1"
reqwest = { version = "0.12.4", features = ["default"] }
anyhow = "1.0.86"
hmac = "0.13.0-pre.3"
sha2 = "0.11.0-pre.3"
base64 = "0.22.1"
chrono = "0.4"
