[package]
name = "easm"
version = "0.1.0"
description = "A Tool that will make you Ezgasm"
authors = ["rootfebri"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.17", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.22", features = [] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.4", features = ["default"] }
anyhow = "1.0.86"
hmac = "0.13.0-pre.3"
sha2 = "0.11.0-pre.3"
base64 = "0.22.1"
chrono = "0.4"
surrealdb = "1.5.2"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-store = "2.0.0-beta.8"
